Initial attempt at ModelChain integration

--- a/docs/sphinx/source/modelchain.ipynb
+++ b/docs/sphinx/source/modelchain.ipynb
@@ -35,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -68,10 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "location = Location(latitude=32.2, longitude=-110.9)\n",
@@ -90,11 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModelChain: \n",
+      "  name: None\n",
+      "  orientation_strategy: None\n",
+      "  clearsky_model: ineichen\n",
+      "  transposition_model: haydavies\n",
+      "  solar_position_method: nrel_numpy\n",
+      "  airmass_model: kastenyoung1989\n",
+      "  dc_model: sapm\n",
+      "  ac_model: snlinverter\n",
+      "  aoi_model: sapm_aoi_loss\n",
+      "  spectral_model: sapm_spectral_loss\n",
+      "  temp_model: sapm_temp\n",
+      "  losses_model: no_extra_losses\n"
+     ]
+    }
+   ],
    "source": [
     "print(mc)"
    ]
@@ -108,10 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "weather = pd.DataFrame([[1050, 1000, 100, 30, 5]], \n",
@@ -130,33 +142,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017-04-01 12:00:00-07:00    15.929176\n",
+       "Name: aoi, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mc.aoi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>i_sc</th>\n",
+       "      <th>i_mp</th>\n",
+       "      <th>v_oc</th>\n",
+       "      <th>v_mp</th>\n",
+       "      <th>p_mp</th>\n",
+       "      <th>i_x</th>\n",
+       "      <th>i_xx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-04-01 12:00:00-07:00</th>\n",
+       "      <td>5.485958</td>\n",
+       "      <td>4.860317</td>\n",
+       "      <td>52.319047</td>\n",
+       "      <td>40.585752</td>\n",
+       "      <td>197.259628</td>\n",
+       "      <td>5.363079</td>\n",
+       "      <td>3.401315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               i_sc      i_mp       v_oc       v_mp  \\\n",
+       "2017-04-01 12:00:00-07:00  5.485958  4.860317  52.319047  40.585752   \n",
+       "\n",
+       "                                 p_mp       i_x      i_xx  \n",
+       "2017-04-01 12:00:00-07:00  197.259628  5.363079  3.401315  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mc.dc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017-04-01 12:00:00-07:00    189.915445\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mc.ac"
    ]
@@ -201,9 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "location = Location(32.2, -110.9)\n",
@@ -222,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ModelChain(poorly_specified_system, location)"
@@ -240,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc = ModelChain(poorly_specified_system, location, \n",
@@ -263,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.run_model(times=weather.index, weather=weather)"
@@ -290,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sapm_system = PVSystem(module_parameters=sandia_module, inverter_parameters=cec_inverter)\n",
@@ -303,9 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.run_model(times=weather.index, weather=weather)\n",
@@ -322,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pvwatts_system = PVSystem(module_parameters={'pdc0': 240, 'gamma_pdc': -0.004})\n",
@@ -336,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.run_model(times=weather.index, weather=weather)\n",
@@ -355,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sapm_system = PVSystem(module_parameters=sandia_module, inverter_parameters=cec_inverter)\n",
@@ -368,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.run_model(times=weather.index, weather=weather)\n",
@@ -431,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.source(mc.run_model)"
@@ -462,9 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.source(mc.pvwatts_dc)"
@@ -480,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# make the objects\n",
@@ -510,9 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.source(mc.sapm)"
@@ -521,9 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# make the objects\n",
@@ -554,9 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pvwatts_system = PVSystem(module_parameters={'pdc0': 240, 'gamma_pdc': -0.004})\n",
@@ -591,9 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.source(mc.infer_dc_model)"
@@ -602,9 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.source(mc.infer_ac_model)"
@@ -622,9 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pvusa(poa_global, wind_speed, temp_air, a, b, c, d):\n",
@@ -662,9 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "module_parameters = {'a': 0.2, 'b': 0.00001, 'c': 0.001, 'd': -0.00005}\n",
@@ -685,9 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.dc_model.func"
@@ -703,14 +749,155 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mc.run_model(times=weather.index, weather=weather)\n",
     "mc.dc"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Campanelli et al. Model\n",
+    "\n",
+    "The model of Campanelli et al. is available in the `pvsystem` module as a collection of lower-level functions that can be used in multiple ways with the `ModelChain` API."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use module parameters fit from data at pv-fit.com to define a PVSystem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pvlib.pvsystem as pvsystem\n",
+    "\n",
+    "# dict defined from JSON response subset from a pv-fit.com model calibration for a 72-cell, 275 W module at SRC\n",
+    "fit_params = {'n_mod_V_0': 1.8760873861375469, 'i_sc_A_0': 8.300642232880616,\n",
+    "              'alpha_bg_mod_0': -0.0794653116276011, 'i_rs_A_0': 3.1370554096867056e-10,\n",
+    "              'g_p_Mho_0': 0.0026062186459665454, 'bg_mod_eV_0': 80.76475208957835,\n",
+    "              'r_s_Ohm_0': 0.5297525695641349}\n",
+    "\n",
+    "# Translate results into module_parameters expected by pvlib-python (TODO Rename to avoid this)\n",
+    "module_params_campanelli = {'Rs': fit_params['r_s_Ohm_0'],\n",
+    "                            'Gsh': fit_params['g_p_Mho_0'],\n",
+    "                            'nNsVth': pvsystem.get_nNsVth_campanelli,\n",
+    "                            'nNsVth_ref': fit_params['n_mod_V_0'],\n",
+    "                            'I0': pvsystem.get_I0_campanelli,\n",
+    "                            'I0_ref': fit_params['i_rs_A_0'],\n",
+    "                            'Eg_ref_star': fit_params['bg_mod_eV_0'],\n",
+    "                            'dEgdT_ref_star': fit_params['alpha_bg_mod_0'],\n",
+    "                            'IL': pvsystem.get_IL_campanelli,\n",
+    "                            'Isc_ref': fit_params['i_sc_A_0']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model wrapper for use with matched reference device effective irradiance and cell temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO Breifly explain how this model is calibrated with F and H and best used with matched ref devices\n",
+    "\n",
+    "# Define the PVSystem and ModelChain\n",
+    "system_campanelli = PVSystem(surface_tilt=20, surface_azimuth=200,\n",
+    "                             module_parameters=module_params_campanelli,\n",
+    "                             inverter_parameters=cec_inverter)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model wrapper for use with SAPM effective irradiance and cell temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModelChain: \n",
+      "  name: Campanelli\n",
+      "  orientation_strategy: None\n",
+      "  clearsky_model: ineichen\n",
+      "  transposition_model: haydavies\n",
+      "  solar_position_method: nrel_numpy\n",
+      "  airmass_model: kastenyoung1989\n",
+      "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f3c3ca921e0>, ModelChain: \n",
+      "  name: Campanelli\n",
+      "  orientation_strategy: None\n",
+      "  clearsky_model: ineichen\n",
+      "  transposition_model: haydavies\n",
+      "  solar_position_method: nrel_numpy\n",
+      "  airmass_model: kastenyoung1989\n",
+      "  dc_model: ...\n",
+      "  ac_model: snlinverter\n",
+      "  aoi_model: sapm_aoi_loss\n",
+      "  spectral_model: sapm_spectral_loss\n",
+      "  temp_model: sapm_temp\n",
+      "  losses_model: no_extra_losses)\n",
+      "  ac_model: snlinverter\n",
+      "  aoi_model: sapm_aoi_loss\n",
+      "  spectral_model: sapm_spectral_loss\n",
+      "  temp_model: sapm_temp\n",
+      "  losses_model: no_extra_losses\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'ModelChain' object has no attribute 'model_run'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-60a246d6d931>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mmc_campanelli\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModelChain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msystem_campanelli_sapm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdc_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msdm_campanelli_sapm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Campanelli\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmc_campanelli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mmc_campanelli\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_run\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweather\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ModelChain' object has no attribute 'model_run'"
+     ]
+    }
+   ],
+   "source": [
+    "from pvlib.modelchain import sdm_campanelli_sapm\n",
+    "\n",
+    "# To use SAPM, we need to include a short-circuit temperature coefficient and reference temp\n",
+    "# In practice, try to match your module as best you can to one from the SAPM database\n",
+    "module_params_campanelli_sapm = {**module_params_campanelli, **sandia_module.to_dict()}\n",
+    "module_params_campanelli_sapm['temp_ref'] = 25.  # degC\n",
+    "    \n",
+    "# Define the PVSystem and ModelChain\n",
+    "system_campanelli_sapm = PVSystem(surface_tilt=20, surface_azimuth=200,\n",
+    "                                  module_parameters=module_params_campanelli_sapm,\n",
+    "                                  inverter_parameters=cec_inverter)\n",
+    "mc_campanelli = ModelChain(system_campanelli_sapm, location, dc_model=sdm_campanelli_sapm, name=\"Campanelli\")\n",
+    "print(mc_campanelli)\n",
+    "mc_campanelli.model_run(times=weather.index, weather=weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -730,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
