Fix version that uses SAPM

--- a/docs/sphinx/source/modelchain.ipynb
+++ b/docs/sphinx/source/modelchain.ipynb
@@ -843,7 +843,7 @@
       "  transposition_model: haydavies\n",
       "  solar_position_method: nrel_numpy\n",
       "  airmass_model: kastenyoung1989\n",
-      "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f3c3ca921e0>, ModelChain: \n",
+      "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f266c8d51e0>, ModelChain: \n",
       "  name: Campanelli\n",
       "  orientation_strategy: None\n",
       "  clearsky_model: ineichen\n",
@@ -864,15 +864,50 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'ModelChain' object has no attribute 'model_run'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-60a246d6d931>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mmc_campanelli\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModelChain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msystem_campanelli_sapm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdc_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msdm_campanelli_sapm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Campanelli\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmc_campanelli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mmc_campanelli\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_run\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweather\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ModelChain' object has no attribute 'model_run'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:1250: RuntimeWarning: overflow encountered in expm1\n",
+      "  kwargs['Rs'] / kwargs['nNsVth']) + \\\n",
+      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:2280: RuntimeWarning: invalid value encountered in subtract\n",
+      "  (Rs[idx_p]*Gsh[idx_p] + 1.) - (a[idx_p]/Rs[idx_p])*lambertwterm\n",
+      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:2154: RuntimeWarning: invalid value encountered in add\n",
+      "  w = w * (1. - np.log(w) + logargW) / (1. + w)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ModelChain: \n",
+       "  name: Campanelli\n",
+       "  orientation_strategy: None\n",
+       "  clearsky_model: ineichen\n",
+       "  transposition_model: haydavies\n",
+       "  solar_position_method: nrel_numpy\n",
+       "  airmass_model: kastenyoung1989\n",
+       "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f266c8d51e0>, ModelChain: \n",
+       "  name: Campanelli\n",
+       "  orientation_strategy: None\n",
+       "  clearsky_model: ineichen\n",
+       "  transposition_model: haydavies\n",
+       "  solar_position_method: nrel_numpy\n",
+       "  airmass_model: kastenyoung1989\n",
+       "  dc_model: ...\n",
+       "  ac_model: snlinverter\n",
+       "  aoi_model: sapm_aoi_loss\n",
+       "  spectral_model: sapm_spectral_loss\n",
+       "  temp_model: sapm_temp\n",
+       "  losses_model: no_extra_losses)\n",
+       "  ac_model: snlinverter\n",
+       "  aoi_model: sapm_aoi_loss\n",
+       "  spectral_model: sapm_spectral_loss\n",
+       "  temp_model: sapm_temp\n",
+       "  losses_model: no_extra_losses"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -889,7 +924,116 @@
     "                                  inverter_parameters=cec_inverter)\n",
     "mc_campanelli = ModelChain(system_campanelli_sapm, location, dc_model=sdm_campanelli_sapm, name=\"Campanelli\")\n",
     "print(mc_campanelli)\n",
-    "mc_campanelli.model_run(times=weather.index, weather=weather)"
+    "mc_campanelli.run_model(times=weather.index, weather=weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017-04-01 12:00:00-07:00    15.929176\n",
+       "Name: aoi, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc.aoi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>i_sc</th>\n",
+       "      <th>i_mp</th>\n",
+       "      <th>v_oc</th>\n",
+       "      <th>v_mp</th>\n",
+       "      <th>p_mp</th>\n",
+       "      <th>i_x</th>\n",
+       "      <th>i_xx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-04-01 12:00:00-07:00</th>\n",
+       "      <td>5.485958</td>\n",
+       "      <td>4.860317</td>\n",
+       "      <td>52.319047</td>\n",
+       "      <td>40.585752</td>\n",
+       "      <td>197.259628</td>\n",
+       "      <td>5.363079</td>\n",
+       "      <td>3.401315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               i_sc      i_mp       v_oc       v_mp  \\\n",
+       "2017-04-01 12:00:00-07:00  5.485958  4.860317  52.319047  40.585752   \n",
+       "\n",
+       "                                 p_mp       i_x      i_xx  \n",
+       "2017-04-01 12:00:00-07:00  197.259628  5.363079  3.401315  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc.dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017-04-01 12:00:00-07:00    189.915445\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc.ac"
    ]
   },
   {
