Fix broken F computation from SAPM

--- a/docs/sphinx/source/modelchain.ipynb
+++ b/docs/sphinx/source/modelchain.ipynb
@@ -288,9 +288,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Location: \n",
+      "  name: None\n",
+      "  latitude: 32.2\n",
+      "  longitude: -110.9\n",
+      "  altitude: 0\n",
+      "  tz: UTC\n",
+      "PVSystem: \n",
+      "  name: None\n",
+      "  surface_tilt: 0\n",
+      "  surface_azimuth: 180\n",
+      "  module: None\n",
+      "  inverter: None\n",
+      "  albedo: 0.25\n",
+      "  racking_model: open_rack_cell_glassback\n"
+     ]
+    }
+   ],
    "source": [
     "location = Location(32.2, -110.9)\n",
     "poorly_specified_system = PVSystem()\n",
@@ -307,9 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not infer DC model from system.module_parameters",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-4e9151e6ff63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mModelChain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoorly_specified_system\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, system, location, orientation_strategy, clearsky_model, transposition_model, solar_position_method, airmass_model, dc_model, ac_model, aoi_model, spectral_model, temp_model, losses_model, name, **kwargs)\u001b[0m\n\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m         \u001b[0;31m# calls setters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 317\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdc_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdc_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    318\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mac_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mac_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maoi_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maoi_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36mdc_model\u001b[0;34m(self, model)\u001b[0m\n\u001b[1;32m    369\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdc_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    370\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 371\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dc_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfer_dc_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    372\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    373\u001b[0m             \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36minfer_dc_model\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    392\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpvwatts_dc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    393\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 394\u001b[0;31m             raise ValueError('could not infer DC model from '\n\u001b[0m\u001b[1;32m    395\u001b[0m                              'system.module_parameters')\n\u001b[1;32m    396\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not infer DC model from system.module_parameters"
+     ]
+    }
+   ],
    "source": [
     "ModelChain(poorly_specified_system, location)"
    ]
@@ -774,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,52 +865,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ModelChain: \n",
-      "  name: Campanelli\n",
-      "  orientation_strategy: None\n",
-      "  clearsky_model: ineichen\n",
-      "  transposition_model: haydavies\n",
-      "  solar_position_method: nrel_numpy\n",
-      "  airmass_model: kastenyoung1989\n",
-      "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f266c8d51e0>, ModelChain: \n",
-      "  name: Campanelli\n",
-      "  orientation_strategy: None\n",
-      "  clearsky_model: ineichen\n",
-      "  transposition_model: haydavies\n",
-      "  solar_position_method: nrel_numpy\n",
-      "  airmass_model: kastenyoung1989\n",
-      "  dc_model: ...\n",
-      "  ac_model: snlinverter\n",
-      "  aoi_model: sapm_aoi_loss\n",
-      "  spectral_model: sapm_spectral_loss\n",
-      "  temp_model: sapm_temp\n",
-      "  losses_model: no_extra_losses)\n",
-      "  ac_model: snlinverter\n",
-      "  aoi_model: sapm_aoi_loss\n",
-      "  spectral_model: sapm_spectral_loss\n",
-      "  temp_model: sapm_temp\n",
-      "  losses_model: no_extra_losses\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:1250: RuntimeWarning: overflow encountered in expm1\n",
-      "  kwargs['Rs'] / kwargs['nNsVth']) + \\\n",
-      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:2280: RuntimeWarning: invalid value encountered in subtract\n",
-      "  (Rs[idx_p]*Gsh[idx_p] + 1.) - (a[idx_p]/Rs[idx_p])*lambertwterm\n",
-      "/home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py:2154: RuntimeWarning: invalid value encountered in add\n",
-      "  w = w * (1. - np.log(w) + logargW) / (1. + w)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -885,7 +878,7 @@
        "  transposition_model: haydavies\n",
        "  solar_position_method: nrel_numpy\n",
        "  airmass_model: kastenyoung1989\n",
-       "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f266c8d51e0>, ModelChain: \n",
+       "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7fe313b62158>, ModelChain: \n",
        "  name: Campanelli\n",
        "  orientation_strategy: None\n",
        "  clearsky_model: ineichen\n",
@@ -905,7 +898,7 @@
        "  losses_model: no_extra_losses"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,6 +909,7 @@
     "# To use SAPM, we need to include a short-circuit temperature coefficient and reference temp\n",
     "# In practice, try to match your module as best you can to one from the SAPM database\n",
     "module_params_campanelli_sapm = {**module_params_campanelli, **sandia_module.to_dict()}\n",
+    "module_params_campanelli_sapm['irrad_ref'] = 1000.  # W/m^2\n",
     "module_params_campanelli_sapm['temp_ref'] = 25.  # degC\n",
     "    \n",
     "# Define the PVSystem and ModelChain\n",
@@ -923,96 +917,7 @@
     "                                  module_parameters=module_params_campanelli_sapm,\n",
     "                                  inverter_parameters=cec_inverter)\n",
     "mc_campanelli = ModelChain(system_campanelli_sapm, location, dc_model=sdm_campanelli_sapm, name=\"Campanelli\")\n",
-    "print(mc_campanelli)\n",
     "mc_campanelli.run_model(times=weather.index, weather=weather)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2017-04-01 12:00:00-07:00    15.929176\n",
-       "Name: aoi, dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mc.aoi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>i_sc</th>\n",
-       "      <th>i_mp</th>\n",
-       "      <th>v_oc</th>\n",
-       "      <th>v_mp</th>\n",
-       "      <th>p_mp</th>\n",
-       "      <th>i_x</th>\n",
-       "      <th>i_xx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-04-01 12:00:00-07:00</th>\n",
-       "      <td>5.485958</td>\n",
-       "      <td>4.860317</td>\n",
-       "      <td>52.319047</td>\n",
-       "      <td>40.585752</td>\n",
-       "      <td>197.259628</td>\n",
-       "      <td>5.363079</td>\n",
-       "      <td>3.401315</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               i_sc      i_mp       v_oc       v_mp  \\\n",
-       "2017-04-01 12:00:00-07:00  5.485958  4.860317  52.319047  40.585752   \n",
-       "\n",
-       "                                 p_mp       i_x      i_xx  \n",
-       "2017-04-01 12:00:00-07:00  197.259628  5.363079  3.401315  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mc.dc"
    ]
   },
   {
@@ -1023,8 +928,8 @@
     {
      "data": {
       "text/plain": [
-       "2017-04-01 12:00:00-07:00    189.915445\n",
-       "dtype: float64"
+       "2017-04-01 12:00:00-07:00    15.929176\n",
+       "Name: aoi, dtype: float64"
       ]
      },
      "execution_count": 13,
@@ -1033,8 +938,61 @@
     }
    ],
    "source": [
-    "mc.ac"
+    "mc_campanelli.aoi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('i_sc', array([8.94433932])),\n",
+       "             ('v_oc', array([39.82156774])),\n",
+       "             ('i_mp', array([8.20668637])),\n",
+       "             ('v_mp', array([30.06369951])),\n",
+       "             ('p_mp', array([246.72335314])),\n",
+       "             ('i_x', array([8.88651217])),\n",
+       "             ('i_xx', array([5.45186953]))])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc_campanelli.dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([237.46198999])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc_campanelli.ac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
